fixing main wrap width

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -63,7 +63,8 @@ header{
 
 
 /* MAIN WRAP */
-.main__wrap{
+body{
+  .main__wrap{
   width:90%;
   position:relative;
   background:white;
@@ -71,6 +72,8 @@ header{
   margin-left:auto;
   margin-right:auto;
 }
+}
+
 
 i.fas.fa-pencil-alt{
     color:white;
